[project]
name = "inthememory"
version = "0.1.0"
description = ""
authors = [
    {name = "baptprr",email = "baptiste_poirier@yahoo.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
